[project]
name = "ToolBox"
version = "0.1.0"
description = "Tool box"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pywebio>=1.8.4",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "pillow>=12.1.0",
]

[tool.ruff]
line-length = 320
lint.extend-select = ["I"]
