[project]
name = "ToolBox"
version = "0.1.0"
description = "Tool box"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pywebio>=1.8.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.33.0",
    "pillow>=12.2.0",
]

[tool.ruff]
line-length = 320
lint.extend-select = ["I"]
